[project]
name = 'numcosmo_py'
version = '0.27.0'
description = 'NumCosmo is a free software C library for cosmology calculations'
readme = 'README.md'
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: C",
    "Programming Language :: Fortran",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]
requires-python = '>=3.11'
license = {file = 'COPYING'}
authors = [
  {name = 'Sandro Dias Pinto Vitenti', email = 'vitenti@uel.br'},
  {name = 'Mariana Penna-Lima', email = 'pennalima@unb.br'}
]

# Runtime requirements of the numcosmo_py package itself. The C library and its
# GObject-introspection typelib are a separate artifact (built with meson,
# shipped via conda-forge/system) and are not expressed here.
dependencies = [
    "numpy",
    "pygobject",
]

# Feature extras grouped by subpackage. Heavy deps stay behind subpackage
# imports, so a bare `import numcosmo_py` only needs the core dependencies.
[project.optional-dependencies]
catalog = ["astropy", "networkx", "scipy"]
app = ["astropy", "matplotlib", "pydantic", "rich", "tabulate", "typer"]
plot = ["getdist", "matplotlib"]
all = ["numcosmo_py[catalog,app,plot]"]
# Optional cosmology integrations; pulled in only when needed (not in the
# default test run, as they are heavy to build from PyPI).
firecrown = ["firecrown", "pyccl", "sacc"]
test = [
    "numcosmo_py[all]",
    "pytest",
    "pytest-lazy-fixtures",
]
dev = [
    "mypy",
    "pylint",
    "flake8",
]

[project.urls]
Repository = "https://github.com/NumCosmo/NumCosmo"
Documentation = "https://numcosmo.github.io/"
Changelog = "https://github.com/NumCosmo/NumCosmo/blob/master/ChangeLog.md"

[tool.setuptools.packages.find]
include = ["numcosmo_py*"]
namespaces = false

[tool.setuptools.package-data]
numcosmo_py = ["*.pyi", "py.typed"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
omit = ["*/external/*"]
