## Process this file with automake to produce Makefile.in

SUBDIRS = 

data_observational_DATA = \
	data_observation.sqlite3               \
	nc_data_bao_empirical_fit_ross2015.obj \
	nc_data_bao_a_eisenstein2005.obj       \
	nc_data_bao_dvdv_percival2010.obj      \
	nc_data_bao_rdv_anderson2012.obj       \
	nc_data_bao_rdv_kazin2014.obj          \
	nc_data_bao_rdv_percival2010.obj       \
	nc_data_bao_dhr_dar_sdss_dr11_2015.obj \
	nc_data_bao_dv_eisenstein2005.obj      \
	nc_data_bao_rdv_beutler2011.obj        \
	nc_data_bao_rdv_padmanabhan2012.obj    \
	nc_data_bao_dvdv_percival2007.obj      \
	nc_data_bao_empirical_fit_ross2015.obj \
	nc_data_bao_rdv_blake2012.obj          \
	nc_data_bao_rdv_percival2007.obj       \
	class_data/bbn/sBBN.dat                \
	class_data/hyrec/Alpha_inf.dat         \
	class_data/hyrec/input.dat             \
	class_data/hyrec/R_inf.dat             \ 
	class_data/hyrec/two_photon_tables.dat

data_observationaldir = \
	$(pkgdatadir)-$(VERSION)/data

EXTRA_DIST = \
	$(data_observational_DATA)

