## Process this file with automake to produce Makefile.in

SUBDIRS =

examplesdir = \
	$(pkgdatadir)-$(VERSION)/examples

examples_DATA = \
	README                 \
	example_simple.c       \
	example_ca.c           \
	example_simple.py      \
	example_ca.py          \
	example_recomb.py      \
	example_fit_snia.py    \
	example_rg_snia_bao.py

EXTRA_DIST = \
	$(examples_DATA)

 