## Process this file with automake to produce Makefile.in

SUBDIRS = pydata_simple

examplesdir = \
	$(pkgdatadir)-$(VERSION)/examples

examples_DATA = \
	README                 \
	example_simple.c       \
	example_ca.c           \
	example_ps.py          \
	example_simple.py      \
	example_ca.py          \
	example_recomb.py      \
	example_fit_snia.py    \
	example_rg_snia_bao.py \
	example_ca_sampling.py \
	example_ode_spline.py  \
	example_hiprim.py      \
	py_hiprim_example.py

EXTRA_DIST = \
	$(examples_DATA)

 