## Process this file with automake to produce Makefile.in

SUBDIRS = tutorials .

notebooksdir = \
	$(pkgdatadir)-$(VERSION)/notebooks

notebooks_DATA = \
	LRTvsFisher.ipynb                      \
	MagDustBounce.ipynb                    \
	BounceVecPert.ipynb                    \
	NC_CCL_Colossus_density_profiles.ipynb \
	FisherMatrixExample.ipynb              \
	KDE/TestInterp.ipynb                   \
	KDE/TestInterp-Rosenbrock.ipynb

EXTRA_DIST = \
	$(notebooks_DATA)
 